<resources>
    <string name="app_name">Simon Says</string>
    <string name="start_game_btn">Start Game</string>
    <string name="restart_game_btn">Restart Game</string>

    <string name="exit_game_btn">Exit Game</string>
    <string name="score_label">Score: %1$d</string>
    <string name="game_over_label">Game Over!</string>

    <string name="game_over_score_label">Your score was: %1$d</string>
    <string name="game_over_high_score_label">High score: %1$d</string>

    <string name="speakable_blue_button">Blue</string>
    <string name="speakable_red_button">Red</string>
    <string name="speakable_yellow_button">Yellow</string>
    <string name="speakable_green_button">Green</string>

    <string name="speed_1_label">1x speed</string>
    <string name="speed_2_label">2x speed</string>

    <string name="manual_mode">Manual mode</string>
    <string name="autonomous_mode">Automatic mode</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="age_restriction_title">What age are you?</string>
    <string name="younger_than_5">5 and younger</string>
    <string name="between_6_8">6–8</string>
    <string name="between_9_12">9–12</string>
    <string name="between_13_15">13–15</string>
    <string name="between_16_17">16–17</string>
    <string name="older_than_18">18 and older</string>
    <string name="age_restriction_back_button_toast">Please, enter your age</string>
</resources>